# nmf-leiden-clustering

./: .gitignore  README.md  aggregate_results.py  create_test_data.py  generate_pca_variants.py  input_data_sample.py  nmf_full_leiden_clustering.py  nmf_leiden_clustering.py  parse_nmf_logs.py  plot_nmf_results.py  pyproject.toml  slurm-17798329.out  slurm-17992967.out  slurm-18197952.out  slurm-18283439.out  visualize.py  visualize_expanded.py
bash_scripts/: aggregate_job_results.sh  leiden_umap.sh  nmf_leiden.sh  nmf_leiden_expand.sh  nmf_leiden_plot.sh  nmf_leiden_sub.sh  nmf_leiden_svd.sh  submit_nmf_leiden.sh
bash_scripts/deprecated/: nmf_leiden_expand (Feb 9, 2026 at 5-47-59 PM).sh
config/: nmf_leiden_configs.txt
deprecated/: visualize.py
