[project]
name = "nmf-leiden-clustering"
version = "0.1.0"
description = "Memory-efficient NMF decomposition and Leiden clustering for large cell datasets"
requires-python = ">=3.9,<3.13"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "scanpy>=1.9.6",
    "anndata>=0.10.0",
    "leidenalg==0.10.2",  # Pinned for HPC compatibility (glibc 2.17+)
    "igraph>=0.10.0,<0.12.0",  # Compatible with leidenalg 0.10.2
    "pynndescent>=0.5.11",
    "numba>=0.58.0",
    "llvmlite>=0.41.0",
]

[project.scripts]
nmf-leiden = "nmf_leiden_clustering:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
